--- a/testimonial.html
+++ b/testimonial.html
@@ -9,8 +9,9 @@
     <meta content="" name="description">
 
     <!-- Favicons -->
-    <link href="img/favicon.png" rel="icon">
+    <!----<link href="img/favicon.png" rel="icon">
     <link href="img/apple-touch-icon.png" rel="apple-touch-icon">
+    ----->
 
     <!-- Google Fonts -->
     <link
@@ -21,7 +22,7 @@
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.0/css/all.min.css" rel="stylesheet">
 
     <!-- Bootstrap css -->
-    <link rel="stylesheet" href="lib/bootstrap/css/bootstrap.css">
+    <link href="lib/bootstrap/css/bootstrap.css" rel="stylesheet">
     <link href="lib/bootstrap/css/bootstrap.min.css" rel="stylesheet">
     <link href="lib/bootstrap/css/style.min.css" rel="stylesheet">
 
@@ -76,7 +77,7 @@
     <!-- Navbar Start -->
     <div class="container-fluid p-0">
         <nav class="navbar navbar-expand-lg bg-white navbar-light py-3 py-lg-0 px-lg-5">
-            <div class="navbar-brand" style="background-color: rgb(27, 4, 161);">
+            <div class="navbar-brand" style="background-color: rgba(27, 15, 96, 0.864);">
                 <a href="#body"><img src="img/Mtendere_logo.png" alt="placeholder" title="Mtendere_logo" /></a>
             </div>
             <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
@@ -91,9 +92,9 @@
                     <div class="nav-item dropdown">
                         <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">More</a>
                         <div class="dropdown-menu m-0">
-                            <a href="detail.html" class="dropdown-item">Course Detail</a>
-                            <a href="feature.html" class="dropdown-item">Gallery</a>
+                            <a href="gallery.html" class="dropdown-item">Galllery</a>
                             <a href="team.html" class="dropdown-item">Team</a>
+                            <a href="contact.html" class="dropdown-item">Contact</a>
                         </div>
                     </div>
                     <div class="nav-item dropdown">
@@ -106,14 +107,13 @@
                             <a href="detail.html" class="dropdown-item">Kolkata Univesity</a>
                             <a href="detail.html" class="dropdown-item">Goa University</a>
                         </div>
-                    </div>                    
-                    <a href="contact.html" class="nav-item nav-link">Contact</a>
-                    <a href="#" class="nav-item nav-link">Blog</a>
+                    </div>
+                    <a href="blog.html" class="nav-item nav-link">Blog</a>
                     <a href="#" class="nav-item nav-link d-none d-lg-block">
                         <i class="fa fa-search"></i>
                     </a>
                 </div>
-                <a href="" class="btn btn-primary py-2 px-4 d-none d-lg-block">Login</a>
+                <a href="login.html" class="btn btn-primary py-2 px-4 d-none d-lg-block">Login</a>
             </div>
         </nav>
     </div>
@@ -200,107 +200,141 @@
     </div>
     <!-- Testimonial Start -->
 
-
-    <!-- Footer -->
-    <!-- Footer Start -->
-    <div class="container-fluid position-relative overlay-top bg-dark text-white-50 py-5" style="margin-top: 90px;">
-        <div class="container mt-5 pt-5">
-            <div class="row">
-                <div class="col-md-6 mb-5">
-                    <a href="index.html" class="navbar-brand">
-                        <a class="navbar-brand" href="#" image src="img/Mtendere_logo.png"></a>
-                    </a>
-                    <p class="m-0">
-                        Mtendere Education Consult is a leading online education company dedicated to providing high-quality education to its clients. Our mission is to help students achieve their dreams and achieve their academic goals, while also providing them with the tools and support they need to succeed.
-                    </p>
-                </div>
-                <div class="col-md-6 mb-5">
-                    <h3 class="text-white mb-4">Newsletter</h3>
-                    <div class="w-100">
-                        <div class="input-group">
-                            <input type="text" class="form-control border-light" style="padding: 30px;"
-                                placeholder="Your Email Address">
-                            <div class="input-group-append">
-                                <button class="btn btn-primary px-4">Sign Up</button>
-                            </div>
+<!-- Footer Start -->
+<div class="container-fluid position-relative overlay-top bg-dark text-white-50 py-5" style="margin-top: 90px;">
+    <div class="container mt-5 pt-5">
+        <div class="row">
+            <div class="col-md-6 mb-5">
+                <a href="index.html" class="navbar-brand">
+                    <a class="navbar-brand" href="#" image src="img/Mtendere_logo.png"></a>
+                </a>
+                <p class="m-0">
+                    Mtendere Education Consult is a leading online education company dedicated to providing
+                    high-quality education to its clients. Our mission is to help students achieve their dreams and
+                    achieve their academic goals, while also providing them with the tools and support they need to
+                    succeed.
+                </p>
+            </div>
+            <div class="col-md-6 mb-5">
+                <h3 class="text-white mb-4">Newsletter</h3>
+                <div class="w-100">
+                    <div class="input-group">
+                        <input type="text" class="form-control border-light" style="padding: 30px;"
+                            placeholder="Your Email Address">
+                        <div class="input-group-append">
+                            <button class="btn btn-primary px-4">Sign Up</button>
                         </div>
                     </div>
                 </div>
             </div>
-            <div class="row">
-                <div class="col-md-4 mb-5">
-                    <h3 class="text-white mb-4">Get In Touch</h3>
-                    <p><i class="fa fa-map-marker-alt mr-2"></i>
-                        Babaje House, Off Mandala Road,<br>
-                        Area 3, Behind NBs<br>
-                        1st Floor Room 1,<br>
-                        Lilongwe<br>
-                    </p>
-                    <p><i class="fa fa-phone-alt mr-2"></i>+265 999 360 325, 265 887 209 531</p>
-                    <p><i class="fa fa-envelope mr-2"></i>mtendereeduconsult@gmail.com</p>
-                    <div class="d-flex justify-content-start mt-4">
-                        <a class="text-white mr-4" href="#"><i class="fab fa-2x fa-twitter"></i></a>
-                        <a class="text-white mr-4" href="#"><i class="fab fa-2x fa-facebook-f"></i></a>
-                        <a class="text-white mr-4" href="#"><i class="fab fa-2x fa-linkedin-in"></i></a>
-                        <a class="text-white" href="#"><i class="fab fa-2x fa-instagram"></i></a>
-                    </div>
+        </div>
+        <div class="row">
+            <div class="col-md-4 mb-5">
+                <h3 class="text-white mb-4">Get In Touch</h3>
+                <p><i class="fa fa-map-marker-alt mr-2"></i>
+                    Babaje House, Off Mandala Road,<br>
+                    Area 3, Behind NBs<br>
+                    1st Floor Room 1,<br>
+                    Lilongwe<br>
+                </p>
+                <p><i class="fa fa-phone-alt mr-2"></i>+265 999 360 325, 265 887 209 531</p>
+                <p><i class="fa fa-envelope mr-2"></i>mtendereeduconsult@gmail.com</p>
+                <div class="d-flex justify-content-start mt-4">
+                    <a class="text-white mr-4" href="#"><i class="fab fa-2x fa-twitter"></i></a>
+                    <a class="text-white mr-4" href="#"><i class="fab fa-2x fa-facebook-f"></i></a>
+                    <a class="text-white mr-4" href="#"><i class="fab fa-2x fa-linkedin-in"></i></a>
+                    <a class="text-white" href="#"><i class="fab fa-2x fa-instagram"></i></a>
                 </div>
-                <div class="col-md-4 mb-5">
-                    <h3 class="text-white mb-4">Scholarships</h3>
-                    <div class="d-flex flex-column justify-content-start">
-                        <a class="text-white-50 mb-2" href="#"><i class="fa fa-angle-right mr-2"></i>Web Design</a>
-                        <a class="text-white-50 mb-2" href="#"><i class="fa fa-angle-right mr-2"></i>Apps Design</a>
-                        <a class="text-white-50 mb-2" href="#"><i class="fa fa-angle-right mr-2"></i>Marketing</a>
-                        <a class="text-white-50 mb-2" href="#"><i class="fa fa-angle-right mr-2"></i>Research</a>
-                        <a class="text-white-50" href="#"><i class="fa fa-angle-right mr-2"></i>SEO</a>
-                    </div>
+            </div>
+            <div class="col-md-4 mb-5">
+                <h3 class="text-white mb-4">Scholarships</h3>
+                <div class="d-flex flex-column justify-content-start">
+                    <a class="text-white-50 mb-2" href="#"><i class="fa fa-angle-right mr-2"></i>Web Design</a>
+                    <a class="text-white-50 mb-2" href="#"><i class="fa fa-angle-right mr-2"></i>Apps Design</a>
+                    <a class="text-white-50 mb-2" href="#"><i class="fa fa-angle-right mr-2"></i>Marketing</a>
+                    <a class="text-white-50 mb-2" href="#"><i class="fa fa-angle-right mr-2"></i>Research</a>
+                    <a class="text-white-50" href="#"><i class="fa fa-angle-right mr-2"></i>SEO</a>
                 </div>
-                <div class="col-md-4 mb-5">
-                    <h3 class="text-white mb-4">Quick Links</h3>
-                    <div class="d-flex flex-column justify-content-start">
-                        <a class="text-white-50 mb-2" href="#"><i class="fa fa-angle-right mr-2"></i>Privacy Policy</a>
-                        <a class="text-white-50 mb-2" href="#"><i class="fa fa-angle-right mr-2"></i>Terms &
-                            Condition</a>
-                        <a class="text-white-50 mb-2" href="#"><i class="fa fa-angle-right mr-2"></i>Regular FAQs</a>
-                        <a class="text-white-50 mb-2" href="#"><i class="fa fa-angle-right mr-2"></i>Help & Support</a>
-                        <a class="text-white-50" href="#"><i class="fa fa-angle-right mr-2"></i>Contact</a>
-                    </div>
+            </div>
+            <div class="col-md-4 mb-5">
+                <h3 class="text-white mb-4">Quick Links</h3>
+                <div class="d-flex flex-column justify-content-start">
+                    <a class="text-white-50 mb-2" href="#"><i class="fa fa-angle-right mr-2"></i>Privacy Policy</a>
+                    <a class="text-white-50 mb-2" href="#"><i class="fa fa-angle-right mr-2"></i>Terms &
+                        Condition</a>
+                    <a class="text-white-50 mb-2" href="#"><i class="fa fa-angle-right mr-2"></i>Regular FAQs</a>
+                    <a class="text-white-50 mb-2" href="#"><i class="fa fa-angle-right mr-2"></i>Help & Support</a>
+                    <a class="text-white-50" href="#"><i class="fa fa-angle-right mr-2"></i>Contact</a>
                 </div>
             </div>
         </div>
     </div>
-    <div class="copyrights">
-        <div class="container">
-            <p>&copy; Copyrights 2025 @Mtendere. All rights reserved.</<p>
+</div>
+<div class="copyrights">
+    <div class="container">
+        <p>&copy; Copyrights 2025 @Mtendere. All rights reserved.</<p>
+    </div>
+</div>
+
+<a href="#" class="back-to-top"><i class="fa fa-chevron-up"></i></a>
+
+<section id="chatbox" class="ai">
+    <input type="checkbox" id="click">
+    <label for="click">
+        <i class="fab fa-facebook-messenger"></i>
+        <i class="fas fa-times"></i>
+    </label>
+    <div class="wrapper">
+        <div class="head-text">
+            ChatBot - Online
+        </div>
+        <div class="chat-box">
+            <div class="desc-text">
+                Kindly complete the form below to begin chatting with our ai model and our next available agent.
+            </div>
+            <form action="#">
+                <div class="field">
+                    <input type="text" placeholder="Your Name" required>
+                </div>
+                <div class="field">
+                    <input type="email" placeholder="Email Address" required>
+                </div>
+                <div class="field textarea">
+                    <textarea cols="30" rows="10" placeholder="Explain your queries.." required></textarea>
+                </div>
+                <div class="field">
+                    <button type="submit"><a href="chat.html">Chat</a></button>
+                </div>
+            </form>
         </div>
     </div>
-    
-    <a href="#" class="back-to-top"><i class="fa fa-chevron-up"></i></a>
+</section>
 
-    <!-- JavaScript Libraries -->
-    <script src="lib/jquery/jquery.min.js"></script>
-    <script src="lib/jquery/jquery-migrate.min.js"></script>
-    <script src="lib/bootstrap/js/bootstrap.bundle.min.js"></script>
-    <script src="lib/superfish/hoverIntent.js"></script>
-    <script src="lib/superfish/superfish.min.js"></script>
-    <script src="lib/easing/easing.min.js"></script>
-    <script src="lib/modal-video/js/modal-video.js"></script>
-    <script src="lib/owlcarousel/owl.carousel.min.js"></script>
 
-    <!-- JavaScript Libraries -->
-    <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.bundle.min.js"></script>
-    <script src="lib/waypoints/waypoints.min.js"></script>
-    <script src="lib/counterup/counterup.min.js"></script>
-    <script src="lib/owlcarousel/owl.carousel.min.js"></script>
+<!-- JavaScript Libraries -->
+<script src="lib/jquery/jquery.min.js"></script>
+<script src="lib/jquery/jquery-migrate.min.js"></script>
+<script src="lib/bootstrap/js/bootstrap.bundle.min.js"></script>
+<script src="lib/superfish/hoverIntent.js"></script>
+<script src="lib/superfish/superfish.min.js"></script>
+<script src="lib/easing/easing.min.js"></script>
+<script src="lib/modal-video/js/modal-video.js"></script>
+<script src="lib/owlcarousel/owl.carousel.min.js"></script>
 
-    <script src="lib/wow/wow.min.js"></script>
+<!-- JavaScript Libraries -->
+<script src="lib/waypoints/waypoints.min.js"></script>
+<script src="lib/counterup/counterup.min.js"></script>
 
-    <!-- Contact Form JavaScript File -->
-    <script src="contactform/contactform.js"></script>
+<script src="lib/wow/wow.min.js"></script>
 
-    <!-- Main Javascript File -->
-    <script src="js/main.js"></script>
+<!-- Contact Form JavaScript File -->
+<script src="contactform/contactform.js"></script>
+
+<!-- Main Javascript File -->
+<script src="js/main.js"></script>
+
+<script src="https://cdn.jsdelivr.net/npm/jquery@3.6.0/dist/jquery.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
 
 </body>
 
