--- a/chat.html
+++ b/chat.html
@@ -1,35 +1,146 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en-us">
 
 <head>
-  <meta charset="UTF-8" />
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css" />
+    <meta charset="utf-8">
+    <title>MTENDERE education consultancy</title>
+    <meta content="width=device-width, initial-scale=1.0" name="viewport">
+    <meta content="" name="keywords">
+    <meta content="" name="description">
 
-  <link href="css/chat.css" rel="stylesheet" />
+    <!-- Favicons -->
+    <!----<link href="img/favicon.png" rel="icon">
+    <link href="img/apple-touch-icon.png" rel="apple-touch-icon">
+    ----->
+
+    <!-- Google Fonts -->
+    <link
+        href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,700,700i|Roboto:100,300,400,500,700|Philosopher:400,400i,700,700i"
+        rel="stylesheet">
+
+    <!-- Font Awesome -->
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.0/css/all.min.css" rel="stylesheet">
+
+    <!-- Bootstrap css -->
+    <link href="lib/bootstrap/css/bootstrap.css" rel="stylesheet">
+    <link href="lib/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <link href="lib/bootstrap/css/style.min.css" rel="stylesheet">
+
+
+    <!-- Libraries CSS Files -->
+    <link href="lib/owlcarousel/assets/owl.carousel.min.css" rel="stylesheet">
+    <link href="lib/owlcarousel/assets/owl.theme.default.min.css" rel="stylesheet">
+    <link href="lib/font-awesome/css/font-awesome.min.css" rel="stylesheet">
+    <link href="lib/animate/animate.min.css" rel="stylesheet">
+    <link href="lib/modal-video/css/modal-video.min.css" rel="stylesheet">
+
+    <!-- Main Stylesheet File -->
+    <link href="css/style.css" rel="stylesheet">
+
+    <!-- Name: MTENDERE education consultancy -->
 </head>
+
 <body>
-  <header>
-    <div>
-      <h2>JavaScript ChatBot</h2>
-      <p class="typing">bot is typing. . .</p>
+    <!-- Topbar Start -->
+    <div class="container-fluid bg-dark">
+        <div class="row py-2 px-lg-5">
+            <div class="col-lg-6 text-center text-lg-left mb-2 mb-lg-0">
+                <div class="d-inline-flex align-items-center text-white">
+                    <small><i class="fa fa-phone-alt mr-2"></i></small>
+                    <small class="px-3">|+265 999 360 325</small>
+                    <small><i class="fa fa-envelope mr-2"></i> mtendereeduconsult@gmail.com</small>
+                </div>
+            </div>
+            <div class="col-lg-6 text-center text-lg-right">
+                <div class="d-inline-flex align-items-center">
+                    <a class="text-white px-2" href="">
+                        <i class="fab fa-facebook-f"></i>
+                    </a>
+                    <a class="text-white px-2" href="">
+                        <i class="fab fa-twitter"></i>
+                    </a>
+                    <a class="text-white px-2" href="">
+                        <i class="fab fa-linkedin-in"></i>
+                    </a>
+                    <a class="text-white px-2" href="">
+                        <i class="fab fa-instagram"></i>
+                    </a>
+                    <a class="text-white pl-2" href="">
+                        <i class="fab fa-youtube"></i>
+                    </a>
+                </div>
+            </div>
+        </div>
     </div>
-    <div id="toogle-chat">
-      <img src="https://javascript-chatbot.vercel.app/src/images/chat_icon.png" class="suggest-chat">
+    <!-- Topbar End -->
+
+    <!-- Navbar Start -->
+    <div class="container-fluid p-0">
+        <nav class="navbar navbar-expand-lg bg-white navbar-light py-3 py-lg-0 px-lg-5">
+            <div class="navbar-brand" style="background-color: rgba(27, 15, 96, 0.864);">
+                <a href="#body"><img src="img/Mtendere_logo.png" alt="placeholder" title="Mtendere_logo" /></a>
+            </div>
+            <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse justify-content-between px-lg-3" id="navbarCollapse">
+                <div class="navbar-nav mx-auto py-0">
+                    <a href="index.html" class="nav-item nav-link active">Home</a>
+                    <a href="about.html" class="nav-item nav-link">About</a>
+                    <a href="services.html" class="nav-item nav-link">Services</a>
+                    <a href="course.html" class="nav-item nav-link">Programs</a>
+                    <div class="nav-item dropdown">
+                        <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">More</a>
+                        <div class="dropdown-menu m-0">
+                            <a href="gallery.html" class="dropdown-item">Galllery</a>
+                            <a href="team.html" class="dropdown-item">Team</a>
+                            <a href="contact.html" class="dropdown-item">Contact</a>
+                        </div>
+                    </div>
+                    <div class="nav-item dropdown">
+                        <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">Universities</a>
+                        <div class="dropdown-menu m-0">
+                            <a href="detail.html" class="dropdown-item">Napal Univesity</a>
+                            <a href="feature.html" class="dropdown-item">Chandigarh Univesity</a>
+                            <a href="team.html" class="dropdown-item">Punjab University</a>
+                            <a href="detail.html" class="dropdown-item">Delhi Univesity</a>
+                            <a href="detail.html" class="dropdown-item">Kolkata Univesity</a>
+                            <a href="detail.html" class="dropdown-item">Goa University</a>
+                        </div>
+                    </div>
+                    <a href="blog.html" class="nav-item nav-link">Blog</a>
+                    <a href="#" class="nav-item nav-link d-none d-lg-block">
+                        <i class="fa fa-search"></i>
+                    </a>
+                </div>
+                <a href="login.html" class="btn btn-primary py-2 px-4 d-none d-lg-block">Login</a>
+            </div>
+        </nav>
     </div>
-  </header>
-  <main>
-  </main>
-  <div class="main-background">
-    <div>
-      <h3>JavaScript ChatBot</h3>
-      <p>Click on Top Right button to view all available chats.</p>
+    <!-- Navbar End -->
+    <header>
+      <div>
+        <h2>JavaScript ChatBot</h2>
+        <p class="typing">bot is typing. . .</p>
+      </div>
+      <div id="toogle-chat">
+        <img src="https://javascript-chatbot.vercel.app/src/images/chat_icon.png" class="suggest-chat">
+      </div>
+    </header>
+    <main>
+    </main>
+    <div class="main-background">
+      <div>
+        <h3>JavaScript ChatBot</h3>
+        <p>Click on Top Right button to view all available chats.</p>
+      </div>
     </div>
-  </div>
-  <section class="all-questions">
-    <h2>Suggested Chats</h2>
-    <div class="questions container"></div>
-  </section>
-  <footer>
+    <section class="all-questions">
+      <h2>Suggested Chats</h2>
+      <div class="questions container"></div>
+    </section>
+    
+    <!-- Footer Start -->
     <form id="chat-form">
       <input type="text" class="chat-input" required>
       <button type="submit" class="chat-submit"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24"
@@ -39,10 +150,143 @@
         </svg>
       </button>
     </form>
-  </footer>
+
+    <div class="container-fluid position-relative overlay-top bg-dark text-white-50 py-5" style="margin-top: 90px;">
+      <div class="container mt-5 pt-5">
+          <div class="row">
+              <div class="col-md-6 mb-5">
+                  <a href="index.html" class="navbar-brand">
+                      <a class="navbar-brand" href="#" image src="img/Mtendere_logo.png"></a>
+                  </a>
+                  <p class="m-0">
+                      Mtendere Education Consult is a leading online education company dedicated to providing
+                      high-quality education to its clients. Our mission is to help students achieve their dreams and
+                      achieve their academic goals, while also providing them with the tools and support they need to
+                      succeed.
+                  </p>
+              </div>
+              <div class="col-md-6 mb-5">
+                  <h3 class="text-white mb-4">Newsletter</h3>
+                  <div class="w-100">
+                      <div class="input-group">
+                          <input type="text" class="form-control border-light" style="padding: 30px;"
+                              placeholder="Your Email Address">
+                          <div class="input-group-append">
+                              <button class="btn btn-primary px-4">Sign Up</button>
+                          </div>
+                      </div>
+                  </div>
+              </div>
+          </div>
+          <div class="row">
+              <div class="col-md-4 mb-5">
+                  <h3 class="text-white mb-4">Get In Touch</h3>
+                  <p><i class="fa fa-map-marker-alt mr-2"></i>
+                      Babaje House, Off Mandala Road,<br>
+                      Area 3, Behind NBs<br>
+                      1st Floor Room 1,<br>
+                      Lilongwe<br>
+                  </p>
+                  <p><i class="fa fa-phone-alt mr-2"></i>+265 999 360 325, 265 887 209 531</p>
+                  <p><i class="fa fa-envelope mr-2"></i>mtendereeduconsult@gmail.com</p>
+                  <div class="d-flex justify-content-start mt-4">
+                      <a class="text-white mr-4" href="#"><i class="fab fa-2x fa-twitter"></i></a>
+                      <a class="text-white mr-4" href="#"><i class="fab fa-2x fa-facebook-f"></i></a>
+                      <a class="text-white mr-4" href="#"><i class="fab fa-2x fa-linkedin-in"></i></a>
+                      <a class="text-white" href="#"><i class="fab fa-2x fa-instagram"></i></a>
+                  </div>
+              </div>
+              <div class="col-md-4 mb-5">
+                  <h3 class="text-white mb-4">Scholarships</h3>
+                  <div class="d-flex flex-column justify-content-start">
+                      <a class="text-white-50 mb-2" href="#"><i class="fa fa-angle-right mr-2"></i>Web Design</a>
+                      <a class="text-white-50 mb-2" href="#"><i class="fa fa-angle-right mr-2"></i>Apps Design</a>
+                      <a class="text-white-50 mb-2" href="#"><i class="fa fa-angle-right mr-2"></i>Marketing</a>
+                      <a class="text-white-50 mb-2" href="#"><i class="fa fa-angle-right mr-2"></i>Research</a>
+                      <a class="text-white-50" href="#"><i class="fa fa-angle-right mr-2"></i>SEO</a>
+                  </div>
+              </div>
+              <div class="col-md-4 mb-5">
+                  <h3 class="text-white mb-4">Quick Links</h3>
+                  <div class="d-flex flex-column justify-content-start">
+                      <a class="text-white-50 mb-2" href="#"><i class="fa fa-angle-right mr-2"></i>Privacy Policy</a>
+                      <a class="text-white-50 mb-2" href="#"><i class="fa fa-angle-right mr-2"></i>Terms &
+                          Condition</a>
+                      <a class="text-white-50 mb-2" href="#"><i class="fa fa-angle-right mr-2"></i>Regular FAQs</a>
+                      <a class="text-white-50 mb-2" href="#"><i class="fa fa-angle-right mr-2"></i>Help & Support</a>
+                      <a class="text-white-50" href="#"><i class="fa fa-angle-right mr-2"></i>Contact</a>
+                  </div>
+              </div>
+          </div>
+      </div>
+  </div>
+  <div class="copyrights">
+      <div class="container">
+          <p>&copy; Copyrights 2025 @Mtendere. All rights reserved.</<p>
+      </div>
+  </div>
+
+  <a href="#" class="back-to-top"><i class="fa fa-chevron-up"></i></a>
+
+  <section id="chatbox" class="ai">
+      <input type="checkbox" id="click">
+      <label for="click">
+          <i class="fab fa-facebook-messenger"></i>
+          <i class="fas fa-times"></i>
+      </label>
+      <div class="wrapper">
+          <div class="head-text">
+              ChatBot - Online
+          </div>
+          <div class="chat-box">
+              <div class="desc-text">
+                  Kindly complete the form below to begin chatting with our ai model and our next available agent.
+              </div>
+              <form action="#">
+                  <div class="field">
+                      <input type="text" placeholder="Your Name" required>
+                  </div>
+                  <div class="field">
+                      <input type="email" placeholder="Email Address" required>
+                  </div>
+                  <div class="field textarea">
+                      <textarea cols="30" rows="10" placeholder="Explain your queries.." required></textarea>
+                  </div>
+                  <div class="field">
+                      <button type="submit"><a href="chat.html">Chat</a></button>
+                  </div>
+              </form>
+          </div>
+      </div>
+  </section>
+
+
+  <!-- JavaScript Libraries -->
+  <script src="lib/jquery/jquery.min.js"></script>
+  <script src="lib/jquery/jquery-migrate.min.js"></script>
+  <script src="lib/bootstrap/js/bootstrap.bundle.min.js"></script>
+  <script src="lib/superfish/hoverIntent.js"></script>
+  <script src="lib/superfish/superfish.min.js"></script>
+  <script src="lib/easing/easing.min.js"></script>
+  <script src="lib/modal-video/js/modal-video.js"></script>
+  <script src="lib/owlcarousel/owl.carousel.min.js"></script>
+
+  <!-- JavaScript Libraries -->
+  <script src="lib/waypoints/waypoints.min.js"></script>
+  <script src="lib/counterup/counterup.min.js"></script>
+
+  <script src="lib/wow/wow.min.js"></script>
+
+  <!-- Contact Form JavaScript File -->
+  <script src="contactform/contactform.js"></script>
+
+  <!-- Main Javascript File -->
+  <script src="js/main.js"></script>
+
+  <script src="js/chat.js"></script>
+
   <script src="https://cdn.jsdelivr.net/npm/jquery@3.6.0/dist/jquery.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
 
-  <script src="js/chat.js"></script>s
 </body>
 </html>
