--- a/contact.html
+++ b/contact.html
@@ -9,8 +9,9 @@
     <meta content="" name="description">
 
     <!-- Favicons -->
-    <link href="img/favicon.png" rel="icon">
+    <!----<link href="img/favicon.png" rel="icon">
     <link href="img/apple-touch-icon.png" rel="apple-touch-icon">
+    ----->
 
     <!-- Google Fonts -->
     <link
@@ -76,7 +77,7 @@
     <!-- Navbar Start -->
     <div class="container-fluid p-0">
         <nav class="navbar navbar-expand-lg bg-white navbar-light py-3 py-lg-0 px-lg-5">
-            <div class="navbar-brand" style="background-color: rgb(27, 4, 161);">
+            <div class="navbar-brand" style="background-color: rgba(27, 15, 96, 0.864);">
                 <a href="#body"><img src="img/Mtendere_logo.png" alt="placeholder" title="Mtendere_logo" /></a>
             </div>
             <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
@@ -91,9 +92,9 @@
                     <div class="nav-item dropdown">
                         <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">More</a>
                         <div class="dropdown-menu m-0">
-                            <a href="detail.html" class="dropdown-item">Course Detail</a>
-                            <a href="feature.html" class="dropdown-item">Gallery</a>
+                            <a href="gallery.html" class="dropdown-item">Galllery</a>
                             <a href="team.html" class="dropdown-item">Team</a>
+                            <a href="contact.html" class="dropdown-item">Contact</a>
                         </div>
                     </div>
                     <div class="nav-item dropdown">
@@ -106,14 +107,13 @@
                             <a href="detail.html" class="dropdown-item">Kolkata Univesity</a>
                             <a href="detail.html" class="dropdown-item">Goa University</a>
                         </div>
-                    </div>                    
-                    <a href="contact.html" class="nav-item nav-link">Contact</a>
-                    <a href="#" class="nav-item nav-link">Blog</a>
+                    </div>
+                    <a href="blog.html" class="nav-item nav-link">Blog</a>
                     <a href="#" class="nav-item nav-link d-none d-lg-block">
                         <i class="fa fa-search"></i>
                     </a>
                 </div>
-                <a href="" class="btn btn-primary py-2 px-4 d-none d-lg-block">Login</a>
+                <a href="login.html" class="btn btn-primary py-2 px-4 d-none d-lg-block">Login</a>
             </div>
         </nav>
     </div>
@@ -236,7 +236,10 @@
                         <a class="navbar-brand" href="#" image src="img/Mtendere_logo.png"></a>
                     </a>
                     <p class="m-0">
-                        Mtendere Education Consult is a leading online education company dedicated to providing high-quality education to its clients. Our mission is to help students achieve their dreams and achieve their academic goals, while also providing them with the tools and support they need to succeed.
+                        Mtendere Education Consult is a leading online education company dedicated to providing
+                        high-quality education to its clients. Our mission is to help students achieve their dreams and
+                        achieve their academic goals, while also providing them with the tools and support they need to
+                        succeed.
                     </p>
                 </div>
                 <div class="col-md-6 mb-5">
@@ -299,8 +302,41 @@
             <p>&copy; Copyrights 2025 @Mtendere. All rights reserved.</<p>
         </div>
     </div>
-    
+
     <a href="#" class="back-to-top"><i class="fa fa-chevron-up"></i></a>
+
+    <section id="chatbox" class="ai">
+        <input type="checkbox" id="click">
+        <label for="click">
+            <i class="fab fa-facebook-messenger"></i>
+            <i class="fas fa-times"></i>
+        </label>
+        <div class="wrapper">
+            <div class="head-text">
+                ChatBot - Online
+            </div>
+            <div class="chat-box">
+                <div class="desc-text">
+                    Kindly complete the form below to begin chatting with our ai model and our next available agent.
+                </div>
+                <form action="#">
+                    <div class="field">
+                        <input type="text" placeholder="Your Name" required>
+                    </div>
+                    <div class="field">
+                        <input type="email" placeholder="Email Address" required>
+                    </div>
+                    <div class="field textarea">
+                        <textarea cols="30" rows="10" placeholder="Explain your queries.." required></textarea>
+                    </div>
+                    <div class="field">
+                        <button type="submit"><a href="chat.html">Chat</a></button>
+                    </div>
+                </form>
+            </div>
+        </div>
+    </section>
+
 
     <!-- JavaScript Libraries -->
     <script src="lib/jquery/jquery.min.js"></script>
@@ -323,6 +359,9 @@
 
     <!-- Main Javascript File -->
     <script src="js/main.js"></script>
+
+    <script src="https://cdn.jsdelivr.net/npm/jquery@3.6.0/dist/jquery.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
 
 </body>
 
