--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
                             <a href="detail.html" class="dropdown-item">Goa University</a>
                         </div>
                     </div>
-                    <a href="#" class="nav-item nav-link">Blog</a>
+                    <a href="blog.html" class="nav-item nav-link">Blog</a>
                     <a href="#" class="nav-item nav-link d-none d-lg-block">
                         <i class="fa fa-search"></i>
                     </a>
