--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
     <!-- Carousel Start -->
     <div class="header-carousel owl-carousel">
         <div class="header-carousel-item">
-            <img src="img/carousel-1.jpg" class="img-fluid w-100" alt="Image">
+            <img src="img/group-five-african-college-students-spending-time-together-campus-university-yard-black-afro-friends-studying-education-theme.jpg" class="img-fluid w-100" alt="Image">
             <div class="carousel-caption">
                 <div class="carousel-caption-content p-3" style="max-width: 900px;">
                     <h4 class="text-secondary text-uppercase sub-title fw-bold mb-4 wow fadeInUp" data-wow-delay="0.1s" style="letter-spacing: 3px;"></h4>
@@ -139,7 +139,7 @@
             </div>
         </div>
         <div class="header-carousel-item">
-            <img src="img/carousel-1.jpg" class="img-fluid w-100" alt="Image">
+            <img src="img/full-shot-smiley-students-library.jpg" class="img-fluid w-100" alt="Image">
             <div class="carousel-caption">
                 <div class="carousel-caption-content p-3" style="max-width: 900px;">
                     <h4 class="text-secondary text-uppercase sub-title fw-bold mb-4" style="letter-spacing: 3px;">Let's Dance</h4>
@@ -156,7 +156,7 @@
             </div>
         </div>
         <div class="header-carousel-item">
-            <img src="img/carousel-1.jpg" class="img-fluid w-100" alt="Image">
+            <img src="img/portrait-african-young-businessman-businesswoman-looking-digital-tablet.jpg" class="img-fluid w-100" alt="Image">
             <div class="carousel-caption">
                 <div class="carousel-caption-content p-3" style="max-width: 900px;">
                     <h4 class="text-secondary text-uppercase sub-title fw-bold mb-4" style="letter-spacing: 3px;">Let's Dance</h4>
@@ -219,6 +219,440 @@
             </div>
         </div>
     </section>
+
+    
+    <!-- 
+        - #SERVICE
+    -->
+
+    <section class="section service" aria-labelledby="service-label">
+        <div class="container">
+
+            <p class="section-subtitle" id="service-label">What We Do?</p>
+
+            <h2 class="h2 section-title">
+                The service we offer is specifically designed to meet your needs.
+            </h2>
+
+            <ul class="grid-list">
+
+                <li>
+                    <div class="service-card">
+
+                        <div class="card-icon">
+                            <ion-icon name="call-outline" aria-hidden="true"></ion-icon>
+                        </div>
+
+                        <h3 class="h4 card-title">24/7 Support</h3>
+
+                        <p class="card-text">
+                            Nulla vitae elit libero, a pharetra augue. Donec id elit non mi porta gravida at eget metus
+                            cras
+                            justo.
+                        </p>
+
+                        <a href="#" class="btn-text">
+                            <span class="span">Learn More</span>
+
+                            <ion-icon name="arrow-forward-outline" aria-hidden="true"></ion-icon>
+                        </a>
+
+                    </div>
+                </li>
+
+                <li>
+                    <div class="service-card">
+
+                        <div class="card-icon">
+                            <ion-icon name="shield-checkmark-outline" aria-hidden="true"></ion-icon>
+                        </div>
+
+                        <h3 class="h4 card-title">Secure Payments</h3>
+
+                        <p class="card-text">
+                            Nulla vitae elit libero, a pharetra augue. Donec id elit non mi porta gravida at eget metus
+                            cras
+                            justo.
+                        </p>
+
+                        <a href="#" class="btn-text">
+                            <span class="span">Learn More</span>
+
+                            <ion-icon name="arrow-forward-outline" aria-hidden="true"></ion-icon>
+                        </a>
+
+                    </div>
+                </li>
+
+                <li>
+                    <div class="service-card">
+
+                        <div class="card-icon">
+                            <ion-icon name="cloud-download-outline" aria-hidden="true"></ion-icon>
+                        </div>
+
+                        <h3 class="h4 card-title">Daily Updates</h3>
+
+                        <p class="card-text">
+                            Nulla vitae elit libero, a pharetra augue. Donec id elit non mi porta gravida at eget metus
+                            cras
+                            justo.
+                        </p>
+
+                        <a href="#" class="btn-text">
+                            <span class="span">Learn More</span>
+
+                            <ion-icon name="arrow-forward-outline" aria-hidden="true"></ion-icon>
+                        </a>
+
+                    </div>
+                </li>
+
+                <li>
+                    <div class="service-card">
+
+                        <div class="card-icon">
+                            <ion-icon name="pie-chart-outline" aria-hidden="true"></ion-icon>
+                        </div>
+
+                        <h3 class="h4 card-title">Market Research</h3>
+
+                        <p class="card-text">
+                            Nulla vitae elit libero, a pharetra augue. Donec id elit non mi porta gravida at eget metus
+                            cras
+                            justo.
+                        </p>
+
+                        <a href="#" class="btn-text">
+                            <span class="span">Learn More</span>
+
+                            <ion-icon name="arrow-forward-outline" aria-hidden="true"></ion-icon>
+                        </a>
+
+                    </div>
+                </li>
+
+            </ul>
+
+        </div>
+    </section>
+
+    <!-- 
+        - #ABOUT
+    -->
+
+    <section class="about" aria-labelledby="about-label">
+        <div class="container">
+
+            <figure class="about-banner">
+                <img src="./assets/images/about-banner.png" width="800" height="580" loading="lazy" alt="about banner"
+                    class="w-100">
+            </figure>
+
+            <div class="about-content">
+
+                <p class="section-subtitle" id="about-label">Why Choose Us?</p>
+
+                <h2 class="h2 section-title">
+                    We bring solutions to make life easier for our clients.
+                </h2>
+
+                <ul>
+
+                    <li class="about-item">
+                        <div class="accordion-card expanded" data-accordion>
+
+                            <h3 class="card-title">
+                                <button class="accordion-btn" data-accordion-btn>
+                                    <ion-icon name="chevron-down-outline" aria-hidden="true" class="down"></ion-icon>
+
+                                    <spna class="span h5">Professional Design</spna>
+                                </button>
+                            </h3>
+
+                            <p class="accordion-content">
+                                Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum
+                                massa justo
+                                sit amet risus. Cras mattis consectetur purus sit amet fermentum. Praesent commodo
+                                cursus magna,
+                                vel.
+                            </p>
+
+                        </div>
+                    </li>
+
+                    <li class="about-item">
+                        <div class="accordion-card" data-accordion>
+
+                            <h3 class="card-title">
+                                <button class="accordion-btn" data-accordion-btn>
+                                    <ion-icon name="chevron-down-outline" aria-hidden="true" class="down"></ion-icon>
+
+                                    <spna class="span h5">Top-Notch Support</spna>
+                                </button>
+                            </h3>
+
+                            <p class="accordion-content">
+                                Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum
+                                massa justo
+                                sit amet risus. Cras mattis consectetur purus sit amet fermentum. Praesent commodo
+                                cursus magna,
+                                vel.
+                            </p>
+
+                        </div>
+                    </li>
+
+                    <li class="about-item">
+                        <div class="accordion-card" data-accordion>
+
+                            <h3 class="card-title">
+                                <button class="accordion-btn" data-accordion-btn>
+                                    <ion-icon name="chevron-down-outline" aria-hidden="true" class="down"></ion-icon>
+
+                                    <spna class="span h5">Exclusive Assets</spna>
+                                </button>
+                            </h3>
+
+                            <p class="accordion-content">
+                                Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum
+                                massa justo
+                                sit amet risus. Cras mattis consectetur purus sit amet fermentum. Praesent commodo
+                                cursus magna,
+                                vel.
+                            </p>
+
+                        </div>
+                    </li>
+
+                </ul>
+
+            </div>
+
+        </div>
+    </section>
+
+    <!-- 
+        - #FEATURE
+    -->
+
+    <section class="section feature" aria-labelledby="feature-label">
+        <div class="container">
+
+            <figure class="feature-banner">
+                <img src="./assets/images/feature-banner.png" width="800" height="531" loading="lazy"
+                    alt="feature banner" class="w-100">
+            </figure>
+
+            <div class="feature-content">
+
+                <p class="section-subtitle" id="feautre-label">Our Solutions</p>
+
+                <h2 class="h2 section-title">
+                    We make your spending stress-free for you to have the perfect control.
+                </h2>
+
+                <p class="section-text">
+                    Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Cras justo
+                    odio,
+                    dapibus ac facilisis in, egestas eget quam. Praesent commodo cursus.
+                </p>
+
+                <ul class="feature-list">
+
+                    <li>
+                        <div class="feature-card">
+
+                            <div class="card-icon">
+                                <ion-icon name="checkmark" aria-hidden="true"></ion-icon>
+                            </div>
+
+                            <span class="span">
+                                Aenean quam ornare. Curabitur blandit.
+                            </span>
+
+                        </div>
+                    </li>
+
+                    <li>
+                        <div class="feature-card">
+
+                            <div class="card-icon">
+                                <ion-icon name="checkmark" aria-hidden="true"></ion-icon>
+                            </div>
+
+                            <span class="span">
+                                Nullam quis risus eget urna mollis ornare.
+                            </span>
+
+                        </div>
+                    </li>
+
+                    <li>
+                        <div class="feature-card">
+
+                            <div class="card-icon">
+                                <ion-icon name="checkmark" aria-hidden="true"></ion-icon>
+                            </div>
+
+                            <span class="span">
+                                Etiam porta euismod malesuada mollis.
+                            </span>
+
+                        </div>
+                    </li>
+
+                    <li>
+                        <div class="feature-card">
+
+                            <div class="card-icon">
+                                <ion-icon name="checkmark" aria-hidden="true"></ion-icon>
+                            </div>
+
+                            <span class="span">
+                                Vivamus sagittis lacus vel augue rutrum.
+                            </span>
+
+                        </div>
+                    </li>
+
+                </ul>
+
+            </div>
+
+        </div>
+    </section>
+
+    <!-- 
+        - #STATS
+    -->
+
+    <section class="stats" aria-label="our stats">
+        <div class="container">
+
+            <ul class="stats-card has-bg-image" style="background-image: url('./assets/images/stats-bg.jpg')">
+
+                <li>
+                    <p class="card-text">
+                        <span class="h1">7518</span>
+
+                        <spna class="span">Completed Projects</spna>
+                    </p>
+                </li>
+
+                <li>
+                    <p class="card-text">
+                        <span class="h1">3472</span>
+
+                        <spna class="span">Happy Customers</spna>
+                    </p>
+                </li>
+
+                <li>
+                    <p class="card-text">
+                        <span class="h1">2184</span>
+
+                        <spna class="span">Expert Employees</spna>
+                    </p>
+                </li>
+
+                <li>
+                    <p class="card-text">
+                        <span class="h1">4523</span>
+
+                        <spna class="span">Awards Won</spna>
+                    </p>
+                </li>
+
+            </ul>
+
+        </div>
+    </section>
+
+    <!--  Testimony Section -->
+    <section id="screenshots" class="padd-section text-center wow fadeInUp">
+        <div class="container">
+            <div class="section-title text-center">
+                <h2>Test Preparation</h2>
+            </div>
+        </div>
+
+        <div class="container">
+            <div class="owl-carousel owl-theme">
+                <div><img src="img/ielts.jpg" alt="img"></div>
+                <div><img src="img/toefl.jpg" alt="img"></div>
+                <div><img src="img/sat.jpg" alt="img"></div>
+                <div><img src="img/gre.jpg" alt="img"></div>
+                <div><img src="img/NAT-JLPT.gif" alt="img"></div>
+                <div><img src="img/gmat.jpg" alt="img"></div>
+            </div>
+        </div>
+
+    </section>
+    <!--Testimonials Section-->
+    <section id="testimonials" class="padd-section text-center wow fadeInUp">
+        <div class="container">
+            <div class="row justify-content-center">
+                <div class="col-md-8">
+                    <div class="testimonials-content">
+                        <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
+                            <div class="carousel-inner" role="listbox">
+                                <div class="carousel-item  active">
+                                    <div class="top-top">
+                                        <h2>
+                                            Dan Kashuwa
+                                        </h2>
+                                        <p>The process of studying for Eligibility Test was made easy by the help of
+                                            Mtendere Education Consultancy. I am very grateful for the help I received
+                                            from the team. I would recommend Mtendere Education Consultancy to anyone
+                                            looking to study abroad.</p>
+                                        </p>
+                                        <h4>CHINA</h4>
+                                    </div>
+                                </div>
+
+                                <div class="carousel-item ">
+                                    <div class="top-top">
+                                        <h2>Emily Banda</h2>
+                                        <p>“I really enjoyed working with Mtendere Education Consultancy. They provided
+                                            me
+                                            with a friendly and supportive environment to learn and grow. I highly
+                                            recommend this consultancy to anyone looking to improve their English
+                                            language skills.”
+                                        </p>
+                                        <h4>INDIA</h4>
+                                    </div>
+                                </div>
+                                <div class="carousel-item ">
+                                    <div class="top-top">
+                                        <h2>Aisha Jamal</h2>
+                                        <p>“It was my good luck to get a consultancy which provides me friendly with a
+                                            good learning
+                                            environment which assists me to find out one of the best universities and a
+                                            city to live in
+                                            Australia. I am always thankful to the consultancy to help to get one step
+                                            forward to my
+                                            career(dream).”</p>
+                                        <h4>Australia</h4>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="btm-btm">
+                                <ul class="list-unstyled carousel-indicators">
+                                    <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
+                                    <li data-target="#carousel-example-generic" data-slide-to="1"></li>
+                                    <li data-target="#carousel-example-generic" data-slide-to="2"></li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+        </div>
+    </section>
+    <!--- end -->
+
     <!-- Training Start -->
     <div class="container-fluid training py-5">
         <div class="container py-5">
