--- a/index.html
+++ b/index.html
@@ -120,61 +120,49 @@
     <!-- Navbar End -->
 
     <!-- Carousel Start -->
-    <div class="carousel owl-carousel">
-        <div class="carousel-item">
-            <img src="img/group-five-african-college-students-spending-time-together-campus-university-yard-black-afro-friends-studying-education-theme.jpg" class="img-fluid w-100" alt="Image">
-            <div class="carousel-caption">
-                <div class="carousel-caption-content p-3" style="max-width: 900px;">
-                    <h4 class="text-secondary text-uppercase sub-title fw-bold mb-4 wow fadeInUp" data-wow-delay="0.1s" style="letter-spacing: 3px;"></h4>
-                    <div class="hero-container">
-                        <h1>Welcome to Mtendere Education Consult</h1>
-                        <h2>Study Abroad.</h2>
-                        <a href="#get-started" class="btn-get-started scrollto">Get Started</a>
+    <section class="headerstart">
+        <div class="container-fluid p-0">
+            <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+                <ol class="carousel-indicators">
+                    <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+                    <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+                    <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+                </ol>
+                <div class="carousel-inner">
+                    <div class="carousel-item active">
+                        <img src="img/hero-bg.jpg" class="d-block w-100" alt="...">
+                        <div class="carousel-caption d-none d-md-block">
+                            <h5>First slide label</h5>
+                            <p>Some representative placeholder content for the first slide.</p>
+                        </div>
                     </div>
-                    <div class="pt-2">
-                        <a class="btn btn-primary rounded-pill text-white py-3 px-5 m-2 wow fadeInLeft" data-wow-delay="0.1s" href="#">Join Now</a>
-                        <a class="btn btn-secondary rounded-pill text-white py-3 px-5 m-2 wow fadeInRight" data-wow-delay="0.3s" href="#">Read More</a>
+                    <div class="carousel-item">
+                        <img src="img/hero-bg.jpg" class="d-block w-100" alt="...">
+                        <div class="carousel-caption d-none d-md-block">
+                            <h5>Second slide label</h5>
+                            <p>Some representative placeholder content for the second slide.</p>
+                        </div>
                     </div>
-                </div>
-            </div>
-        </div>
-        <div class="carousel-item">
-            <img src="img/full-shot-smiley-students-library.jpg" class="img-fluid w-100" alt="Image">
-            <div class="carousel-caption">
-                <div class="carousel-caption-content p-3" style="max-width: 900px;">
-                    <h4 class="text-secondary text-uppercase sub-title fw-bold mb-4" style="letter-spacing: 3px;">Let's Dance</h4>
-                    <div class="hero-container">
-                        <h1>Welcome to Mtendere Education Consult</h1>
-                        <h2>Study Abroad.</h2>
-                        <a href="#get-started" class="btn-get-started scrollto">Get Started</a>
-                    </div>
-                    <div class="pt-2">
-                        <a class="btn btn-primary rounded-pill text-white py-3 px-5 m-2 wow fadeInLeft" data-wow-delay="0.1s" href="#">Join Now</a>
-                        <a class="btn btn-secondary rounded-pill text-white py-3 px-5 m-2 wow fadeInRight" data-wow-delay="0.3s" href="#">Read More</a>
+                    <div class="carousel-item">
+                        <img src="img/hero-bg.jpg" class="d-block w-100" alt="...">
+                        <div class="carousel-caption d-none d-md-block">
+                            <h5>Third slide label</h5>
+                            <p>Some representative placeholder content for the third slide.</p>
+                        </div>
                     </div>
                 </div>
+                <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="sr-only">Previous</span>
+                </a>
+                <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="sr-only">Next</span>
+                </a>
             </div>
         </div>
-        <div class="carousel-item">
-            <img src="img/portrait-african-young-businessman-businesswoman-looking-digital-tablet.jpg" class="img-fluid w-100" alt="Image">
-            <div class="carousel-caption">
-                <div class="carousel-caption-content p-3" style="max-width: 900px;">
-                    <h4 class="text-secondary text-uppercase sub-title fw-bold mb-4" style="letter-spacing: 3px;">Let's Dance</h4>
-                    <div class="hero-container">
-                        <h1>Welcome to Mtendere Education Consult</h1>
-                        <h2>Study Abroad.</h2>
-                        <a href="#get-started" class="btn-get-started scrollto">Get Started</a>
-                    </div>
-                    <div class="pt-2">
-                        <a class="btn btn-primary rounded-pill text-white py-3 px-5 m-2 wow fadeInLeft" data-wow-delay="0.1s" href="#">Join Now</a>
-                        <a class="btn btn-secondary rounded-pill text-white py-3 px-5 m-2 wow fadeInRight" data-wow-delay="0.3s" href="#">Read More</a>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-    <!-- Carousel End -->
-
+    </section>
+        
     <!--Get Started Section-->
     <section id="get-started" class="padd-section text-center">
         <div class="container">
