--- a/index.html
+++ b/index.html
@@ -130,21 +130,21 @@
                 </ol>
                 <div class="carousel-inner">
                     <div class="carousel-item active">
-                        <img src="img/hero-bg.jpg" class="d-block w-100" alt="...">
+                        <img src="img/full-shot-smiley-students-library.jpg" class="d-block w-100" alt="...">
                         <div class="carousel-caption d-none d-md-block">
                             <h5>First slide label</h5>
                             <p>Some representative placeholder content for the first slide.</p>
                         </div>
                     </div>
                     <div class="carousel-item">
-                        <img src="img/hero-bg.jpg" class="d-block w-100" alt="...">
+                        <img src="img/group-five-african-college-students-spending-time-together-campus-university-yard-black-afro-friends-studying-education-theme.jpg" class="d-block w-100" alt="...">
                         <div class="carousel-caption d-none d-md-block">
-                            <h5>Second slide label</h5>
-                            <p>Some representative placeholder content for the second slide.</p>
+                            <h2>Welcome To Mtendere</h2>
+                            <p>Study Abroad</p>
                         </div>
                     </div>
                     <div class="carousel-item">
-                        <img src="img/hero-bg.jpg" class="d-block w-100" alt="...">
+                        <img src="img/study-group-african-people.jpg" class="d-block w-100" alt="...">
                         <div class="carousel-caption d-none d-md-block">
                             <h5>Third slide label</h5>
                             <p>Some representative placeholder content for the third slide.</p>
