new changes on chat

--- a/index.html
+++ b/index.html
@@ -842,14 +842,14 @@
                         <button type="submit"><a href="chat.html">Chat</a></button>
                     </div>
                     <!-- Modal -->
-                    <div id="myModal" class="modal fade" role="dialog">
+                    <div id="myModal modal-sm" class="modal fade" role="dialog">
                         <div class="modal-dialog">
                     
                         <!-- Modal content-->
                         <div class="modal-content">
                             <div class="modal-header">
                             <button type="button" class="close" data-dismiss="modal">&times;</button>
-                            <header>
+                            <div class="header-modal">
                                 <div>
                                     <h2>JavaScript ChatBot</h2>
                                     <p class="typing">bot is typing. . .</p>
@@ -857,8 +857,8 @@
                                 <div id="toogle-chat">
                                     <img src="https://javascript-chatbot.vercel.app/src/images/chat_icon.png" class="suggest-chat">
                                 </div>
-                            </header>
-                            <main>
+                            </div>
+                            <dic class="main-modal">
                             </main>
                             <div class="main-background">
                                 <div>
@@ -872,7 +872,7 @@
                             </section>
                         
                             <!-- Footer Start -->
-                            <footer>
+                            <div class="footer-modal">
                                 <form id="chat-form">
                                     <input type="text" class="chat-input" required>
                                     <button type="submit" class="chat-submit"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24"
@@ -882,7 +882,7 @@
                                         </svg>
                                     </button>
                                 </form>
-                            </footer>
+                            </div>
                             <div class="modal-footer">
                                 <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
                             </div>
