--- a/index.html
+++ b/index.html
@@ -839,7 +839,7 @@
                         <textarea cols="30" rows="10" placeholder="Explain your queries.." required></textarea>
                     </div>
                     <div class="field" data-toggle="modal" data-target="#myModal">
-                        <button type="submit"><a href="chat.html">Chat</a></button>
+                        <button type="submit">Chat</button>
                     </div>
                     <!-- Modal -->
                     <div id="myModal modal-sm" class="modal fade" role="dialog">
@@ -915,6 +915,7 @@
 
     <!-- Main Javascript File -->
     <script src="js/main.js"></script>
+    <script src="js/chat.js"></script>
 
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.6.0/dist/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
