--- a/index.html
+++ b/index.html
@@ -848,6 +848,7 @@
                         <textarea cols="30" rows="10" placeholder="Explain your queries.." required></textarea>
                     </div>
                     <div class="field" data-toggle="modal" data-target="#myModal">
+                        <a href="#myModal" class="btn">
                         <button type="submit">Chat</button>
                     </div>
                     <!-- Modal -->
